main - type fixes and formatting
